doozy_ws_2/log/build_2024-04-25_14-48-16/2_t_dolly_logistics_driver/stderr.log
  File "/home/avinaash/doozy_robotics/doozy_ws_2/install/2_t_dolly_logistics_driver/lib/python3.8/site-packages/2_t_dolly_logistics_driver/latch_unlatch_03.py", line 34
    self.create_timer(0.1, self.docked_compute(self.docked, self.,tug_arm))
                                                                 ^
SyntaxError: invalid syntax

